--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,5 @@
 name: Git Sync Action
+author: Wei He <github@weispot.com>
 description: 🔃  Sync between two independent repositories
 branding:
   icon: 'git-branch'
